--- a/menu.html
+++ b/menu.html
@@ -153,15 +153,15 @@
 <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
 
 <script>
-   var config = {
-    apiKey: "AIzaSyC1KT3aBbQbx_LTpcdSO995B_f0blI8fzw",
-    authDomain: "onlyfansclone-3ada1.firebaseapp.com",
-    projectId: "onlyfansclone-3ada1",
-    databaseURL: "https://onlyfansclone-3ada1-default-rtdb.firebaseio.com",
-    storageBucket: "onlyfansclone-3ada1.appspot.com",
-    messagingSenderId: "1010568675424",
-    appId: "1:1010568675424:web:9dd1d1eb8d5922287ac305",
-    measurementId: "G-2P0E5VP2LV"
+var config = {
+    apiKey: "AIzaSyAmxHeJ3eFT4VgbD9RJnw4_i-a4mfw-1Nc",
+    authDomain: "rustopenkey.firebaseapp.com",
+    projectId: "rustopenkey",
+    databaseURL: "https://rustopenkey-default-rtdb.firebaseio.com",
+    storageBucket: "rustopenkey.appspot.com",
+    messagingSenderId: "342681849359",
+    appId: "1:342681849359:web:d74145020adc74cece9d7a",
+    measurementId: "G-WLYPZZ84H2"
   };
   firebase.initializeApp(config);
    </script>
