--- a/menu2.html
+++ b/menu2.html
@@ -166,7 +166,7 @@ var config = {
   firebase.initializeApp(config);
    </script>
 
-<script type="text/javascript" src="js/menu.js">  </script>
+<script type="text/javascript" src="js/menu2.js">  </script>
 
 
 
