--- a/menu2.html
+++ b/menu2.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>onlyfans</title>
+    <title>Rust open key</title>
 </head>
 <body onload="render()">
     <section id="sidebar" style="float: left; width: 18rem; height: 40rem; margin-top: 30px; margin-right: 20px;" >
