--- a/menu2.html
+++ b/menu2.html
@@ -74,7 +74,63 @@
         
     </section>
    
-<section></section>
+<section>
+
+   <div class="flex flex-col gap-2">
+      <div class="m-auto h-52 w-full max-w-md bg-white shadow p-2 border-t-4 border-green-600 rounded">
+          <header class="p-2 border-b flex"> 
+              <div class="flex flex-col">
+                  <h4 class="text-xs font-semibold">Montant payé</h4>
+                  <h1 class="text-lg font-mono text-green-600">1 385,000 Fcfa</h1>
+              </div>
+          </header>
+          <div class="flex flex-wrap p-2 w-full gap-4">
+              <div class="flex flex-col w-full">
+                  <h4 class="text-xs">Libellé</h4>
+                  <h1 class="text-lg">6-Frais de scolarité 2eme trimestre</h1>
+              </div>
+  
+              <div class="flex flex-col">
+                  <h4 class="text-xs">Date Quittance</h4>
+                  <h1 class="text-md">11/08/2022</h1>
+              </div>
+  
+              <div class="flex flex-col">
+                  <h4 class="text-xs">N° Quittance</h4>
+                  <h1 class="text-md font-thin">QUITTANCE-22-2022-8-7488a</h1>
+              </div>
+  
+          </div>
+  
+      </div>
+      <div class="m-auto h-52 w-full max-w-md bg-white shadow p-2 border-t-4 border-red-600 rounded">
+          <header class="p-2 border-b flex"> 
+              <div class="flex flex-col">
+                  <h4 class="text-xs font-semibold">Montant impayé</h4>
+                  <h1 class="text-lg font-mono text-red-600">1 385,000 Fcfa</h1>
+              </div>
+          </header>
+          <div class="flex flex-wrap p-2 w-full gap-4">
+              <div class="flex flex-col w-full">
+                  <h4 class="text-xs">Libellé</h4>
+                  <h1 class="text-lg">6-Frais de scolarité 2eme trimestre</h1>
+              </div>
+  
+              <div class="flex flex-col">
+                  <h4 class="text-xs">Date Quittance</h4>
+                  <h1 class="text-md">11/08/2022</h1>
+              </div>
+  
+              <div class="flex flex-col">
+                  <h4 class="text-xs">N° Quittance</h4>
+                  <h1 class="text-md font-thin">QUITTANCE-22-2022-8-7488a</h1>
+              </div>
+  
+          </div>
+  
+      </div>
+  </div>
+</section>
 
 <style>
    div.sticky {
