--- a/menu2.html
+++ b/menu2.html
@@ -11,7 +11,7 @@
     <title>Rust open key</title>
 </head>
 <body onload="render()">
-    <section id="sidebar" style="float: left; width: 18rem; height: 40rem; margin-top: 30px; margin-right: 20px;" >
+    <section id="sidebar" style="float: left; width: auto; height: 40rem; margin-top: 30px; margin-right: 20px;" >
 
         <div class="h-3/4 flex flex-col justify-around text-gray-500">
             <h3 class="pl-1 text-sm flex items-center py-2 mb-2 hover:bg-gray-100 hover:text-gray-700 transition duration-200 ease-in">
