--- a/menu2.html
+++ b/menu2.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rust open key</title>
 </head>
-<body onload="render()">
-    <section id="sidebar" style="float: left; width: auto; height: 40rem; margin-top: 30px; margin-right: 20px;" >
+<body onload="bodyrender()">
+    <section id="sidebar" style="float: left; width: 18rem; height: 40rem; margin-top: 30px; margin-right: 20px;" >
 
         <div class="h-3/4 flex flex-col justify-around text-gray-500">
             <h3 class="pl-1 text-sm flex items-center py-2 mb-2 hover:bg-gray-100 hover:text-gray-700 transition duration-200 ease-in">
@@ -84,7 +84,7 @@
                   <div class="p-6 sm:p-16">
                       <div class="space-y-4">
                           
-                          <h2 class="mb-8 text-2xl text-cyan-900 font-bold">Landing Page Heading<br>
+                          <h2 id="generatecode" class="mb-8 text-2xl text-cyan-900 font-bold">Landing Page Heading<br>
                           Heading Content</h2>
                       </div>
                       <div class="mt-16 grid space-y-4">
