--- a/menu2.html
+++ b/menu2.html
@@ -82,9 +82,9 @@
           <div class="m-auto md:w-8/12 lg:w-6/12 xl:w-6/12">
               <div class="rounded-xl bg-white shadow-xl">
                   <div class="p-6 sm:p-16">
-                      <div class="space-y-4">
+                      <div class="space-y-4" align="center">
                           
-                          <h2 id="generatecode" class="mb-8 text-2xl text-cyan-900 font-bold">Landing Page Heading<br>
+                          <h2  id="generatecode" class="mb-8 text-2xl text-cyan-900 font-bold">Landing Page Heading<br>
                           Heading Content</h2>
                       </div>
                       <div class="mt-16 grid space-y-4">
