--- a/menu2.html
+++ b/menu2.html
@@ -99,7 +99,7 @@
                               <div class="relative flex items-center space-x-4 justify-center">
                                   
                                   <a href="">
-                                  <span class="block w-max font-semibold tracking-wide text-gray-700 text-sm transition duration-300 group-hover:text-blue-600 sm:text-base">Codigo correcto ✓</span>
+                                  <span class="block w-max font-semibold tracking-wide text-gray-700 text-sm transition duration-300 group-hover:text-green-600 sm:text-base">Codigo correcto ✓</span>
                               </a></div>
                           </button>
                           
