--- a/menu2.html
+++ b/menu2.html
@@ -91,7 +91,7 @@
                           <button class="group h-12 px-6 border-2 border-gray-300 rounded-full transition duration-300 hover:border-blue-400 focus:bg-blue-50 active:bg-blue-100">
                               <div class="relative flex items-center space-x-4 justify-center">
                                   <a href="">
-                                  <span class="block w-max font-semibold tracking-wide text-gray-700 text-sm transition duration-300 group-hover:text-blue-600 sm:text-base">Generar un codigo nuevo</span>
+                                  <span class="block w-max font-semibold tracking-wide text-gray-700 text-sm transition duration-300 group-hover:text-red-600 sm:text-base">Generar un codigo nuevo</span>
                               </a>
                               </div>
                           </button>
