--- a/menu2.html
+++ b/menu2.html
@@ -88,14 +88,14 @@
                           Heading Content</h2>
                       </div>
                       <div class="mt-16 grid space-y-4">
-                          <button class="group h-12 px-6 border-2 border-gray-300 rounded-full transition duration-300 hover:border-blue-400 focus:bg-blue-50 active:bg-blue-100">
+                          <button class="group h-12 px-6 border-2 border-gray-300 rounded-full transition duration-300 hover:border-red-400 focus:bg-red-50 active:bg-red-100">
                               <div class="relative flex items-center space-x-4 justify-center">
                                   <a href="">
                                   <span class="block w-max font-semibold tracking-wide text-gray-700 text-sm transition duration-300 group-hover:text-red-600 sm:text-base">Generar un codigo nuevo</span>
                               </a>
                               </div>
                           </button>
-                          <button class="group h-12 px-6 border-2 border-gray-300 rounded-full transition duration-300 hover:border-blue-400 focus:bg-blue-50 active:bg-blue-100">
+                          <button class="group h-12 px-6 border-2 border-gray-300 rounded-full transition duration-300 hover:border-green-400 focus:bg-green-50 active:bg-green-100">
                               <div class="relative flex items-center space-x-4 justify-center">
                                   
                                   <a href="">
