--- a/menu2.html
+++ b/menu2.html
@@ -88,7 +88,7 @@
                           Heading Content</h2>
                       </div>
                       <div class="mt-16 grid space-y-4">
-                          <button onclick="generate()" class="group h-12 px-6 border-2 border-gray-300 rounded-full transition duration-300 hover:border-red-400 focus:bg-red-50 active:bg-red-100">
+                          <button id="Buttongenerate" onclick="generate()" class="group h-12 px-6 border-2 border-gray-300 rounded-full transition duration-300 hover:border-red-400 focus:bg-red-50 active:bg-red-100">
                               <div class="relative flex items-center space-x-4 justify-center">
                                   <a>
                                   <span class="block w-max font-semibold tracking-wide text-gray-700 text-sm transition duration-300 group-hover:text-red-600 sm:text-base">Generar un codigo nuevo</span>
