--- a/menu2.html
+++ b/menu2.html
@@ -87,7 +87,7 @@
                      <div class="flex  w-64 m-auto items-center h-32 justify-center">
                         <div class="py-1 relative min-w-full">
                             <div class="h-2 bg-gray-200 rounded-full">
-                                <div class="absolute h-2 rounded-full bg-teal-600 w-0" style="width: 58.5714%;"></div>
+                                <div class="absolute h-2 rounded-full bg-teal-600 w-0" style="width: 58.5714%; color: green;"></div>
                                 <div class="absolute h-4 flex items-center justify-center w-4 rounded-full bg-white shadow border border-gray-300 -ml-2 top-0 cursor-pointer" unselectable="on" onselectstart="return false;" style="left: 58.5714%;">
                                     <div class="relative -mt-2 w-1">
                                         <div class="absolute z-40 opacity-100 bottom-100 mb-2 left-0 min-w-full" style="margin-left: -20.5px;">
