--- a/menu2.html
+++ b/menu2.html
@@ -92,7 +92,10 @@
               
 
                       <div class="space-y-4" align="center">
-                        <div class="radial-progress" style="--value:60; --size:3.5rem;">60%</div>
+                        <span class="countdown font-mono text-6xl">
+                           <span style="--value:39;"></span>
+                         </span>
+
                           <h2  id="generatecode" class="mb-8 text-2xl text-cyan-900 font-bold"></h2>
                       </div>
                       <div class="mt-16 grid space-y-4">
