--- a/menu2.html
+++ b/menu2.html
@@ -90,6 +90,11 @@
                         <span class="countdown font-mono text-6xl">
                            <span style="--value:0;"></span>
                         </span>
+                        <span>-</span>
+                        <span class="countdown font-mono text-6xl">
+                           <span style="--value:0;"></span>
+                        </span>
+
                      </div>
                                        
 
