--- a/menu2.html
+++ b/menu2.html
@@ -88,11 +88,11 @@
                      
                      <div align="center">
                         <span class="countdown font-mono text-6xl">
-                           <span style="--value:0;"></span>
+                           <h2 style="--value:0;"></span>
                         </span>
                         <span class="countdown font-mono text-6xl">-</span>
                         <span class="countdown font-mono text-6xl">
-                           <span style="--value:9999;"></span>
+                           <h2 style="--value:9999;"></span>
                         </span>
 
                      </div>
