--- a/menu2.html
+++ b/menu2.html
@@ -91,7 +91,7 @@
   
                            <div class="stat">
                              <div class="stat-title">Inicio</div>
-                             <div class="stat-value">0</div>
+                             <div id="contador" class="stat-value">0</div>
                            </div>
                            
                          </div>
