--- a/menu2.html
+++ b/menu2.html
@@ -20,6 +20,8 @@
                   <div class="p-6 sm:p-16">
                      
                      <div align="center">
+                      <h2  id="nombrepuerta" class="mb-8 text-2xl text-cyan-900 font-bold"></h2>
+
                         <div class="stats shadow">
   
                            <div class="stat">
